--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -2,6 +2,4 @@
 
 <%= render @friend %>
 
-
-<br>
-<%= button_to "Destroy Contact", @friend, method: :delete, class:"btn btn-secondary" %>
+<%= button_to "Delete", @friend, method: :delete, class:"btn btn-outline-danger" %>
