--- a/app/views/staffs/edit.html.erb
+++ b/app/views/staffs/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show Employee", @staff %> |
-  <%= link_to "Back to Staffing", staffs_path %>
+  <%= link_to "Show Employee", @staff, class:"btn btn-outline-secondary" %> 
+  <%= link_to "Back to Staffing", staffs_path, class:"btn btn-outline-secondary" %>
 </div>
