--- a/app/views/staffs/new.html.erb
+++ b/app/views/staffs/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to Staffing", staffs_path %>
+  <%= link_to "Back to Staffing", staffs_path, class:"btn btn-outline-secondary" %>
 </div>
