--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
-<h1 class="hello"><%= render 'wxes/wxes' %>
+
+<h1 class="hello">Hello, Manager</h1>
+
+
+<button href="/psyche" data-remote="true" data-method="post">Go</button>
