--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -8,6 +8,18 @@
   </head>
 
   <body>
-    <%= yield %>
+  <div id="staffs">
+    json.array! @staffs, partial: "staffs/staff", as: :staff
+    <% @staffs.each do |staff| %>
+    <ol>
+      <li>
+        <%= staff.employee_name %>
+      </li>
+      <li>
+        <%= staff.string %>
+      </li>
+    </ol>
+  <% end %>
+    </div>
   </body>
 </html>
